--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "helpers/spss"]
 	path = helpers/spss
-	url = git@github.com:adamzammit/spss.git
+	url = https://github.com/adamzammit/spss.git
